@@ -4,8 +4,11 @@ import com.github.roleplaycauldron.brotkrumen.graph.Edge;
 import com.github.roleplaycauldron.brotkrumen.graph.EdgeFlag;
 import com.github.roleplaycauldron.brotkrumen.graph.Graph;
 import com.github.roleplaycauldron.brotkrumen.graph.Node;
+import com.github.roleplaycauldron.brotkrumen.graph.NodeRef;
 import com.github.roleplaycauldron.brotkrumen.graph.TeleportRules;
 import com.github.roleplaycauldron.brotkrumen.graph.Warp;
+import com.github.roleplaycauldron.brotkrumen.graph.search.PathResult;
+import com.github.roleplaycauldron.brotkrumen.graph.search.TraversalKind;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -13,7 +16,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -68,50 +70,66 @@ class DijkstraAlgorithmTest {
 
     @Test
     void testDijkstraSuitability() {
-        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true);
-        final TeleportRules rules = new TeleportRules(true, true, List.of(spawn));
+        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true, false);
+        final TeleportRules rules = new TeleportRules(true, true, true, List.of(spawn));
         assertTrue(algorithm.suitable(graph, rules), "The algorithm should be suitable, but it isn't");
     }
 
     @Test
     void testDijkstraPathFinderWithLocalTeleport() {
-        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true);
-        final TeleportRules rules = new TeleportRules(true, true, List.of(spawn));
-        final List<Node> pathNodes = algorithm.findPath(graph, uuidOne, Set.of(uuidSeven), null, rules);
+        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true, false);
+        final TeleportRules rules = new TeleportRules(true, true, true, List.of(spawn));
+        final PathResult path = algorithm.findPathResult(graph, uuidOne, Set.of(uuidSeven), null, rules);
 
-        assertNotNull(pathNodes, "The path should not be null");
+        assertNotNull(path, "The path should not be null");
 
-        final List<UUID> pathIds = pathNodes.stream().map(Node::graphId).collect(Collectors.toList());
+        final List<UUID> pathIds = path.nodes().stream().map(NodeRef::nodeId).toList();
         final List<UUID> expected = List.of(uuidOne, uuidSix, uuidSeven);
         assertIterableEquals(expected, pathIds, "The node ids of the paths are not matching");
     }
 
     @Test
-    void testDijkstraPathFinderWithGlobalTeleport() {
-        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true);
-        final TeleportRules rules = new TeleportRules(true, true, List.of(spawn));
-        final List<Node> pathNodes = algorithm.findPath(graph, uuidThree, Set.of(uuidOne), null, rules);
+    void testDijkstraPathFinderWithWarp() {
+        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true, false);
+        final TeleportRules rules = new TeleportRules(true, true, true, List.of(spawn));
+        final PathResult path = algorithm.findPathResult(graph, uuidThree, Set.of(uuidOne), null, rules);
 
-        assertNotNull(pathNodes, "The path should not be null");
+        assertNotNull(path, "The path should not be null");
 
-        final List<UUID> pathIds = pathNodes.stream().map(Node::graphId).collect(Collectors.toList());
+        final List<UUID> pathIds = path.nodes().stream().map(NodeRef::nodeId).toList();
         final List<UUID> expected = List.of(uuidThree, uuidOne);
         assertIterableEquals(expected, pathIds, "The node ids of the paths are not matching");
     }
 
     @Test
-    void testBlockedPathWithoutGlobalTeleport() {
-        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true);
-        final TeleportRules rules = new TeleportRules(true, true, List.of(spawn));
-        final Predicate<Edge> filterWithoutGlobalTeleport =
-                edge -> !edge.flags().contains(EdgeFlag.TELEPORT_GLOBAL) && !edge.flags().contains(EdgeFlag.BLOCKED);
+    void testBlockedPathWithoutWarpShortcut() {
+        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true, false);
+        final TeleportRules rules = new TeleportRules(true, true, true, List.of(spawn));
+        final Predicate<Edge> filterWithoutWarp =
+                edge -> edge.edgeId() != null && !edge.flags().contains(EdgeFlag.BLOCKED);
 
-        final List<Node> pathNodes = algorithm.findPath(graph, uuidThree, Set.of(uuidOne), filterWithoutGlobalTeleport, rules);
+        final PathResult path = algorithm.findPathResult(graph, uuidThree, Set.of(uuidOne), filterWithoutWarp, rules);
 
-        assertNotNull(pathNodes, "The path should not be null");
+        assertNotNull(path, "The path should not be null");
 
-        final List<UUID> pathIds = pathNodes.stream().map(Node::graphId).collect(Collectors.toList());
+        final List<UUID> pathIds = path.nodes().stream().map(NodeRef::nodeId).toList();
         final List<UUID> expected = List.of(uuidThree, uuidSeven, uuidSix, uuidOne);
         assertIterableEquals(expected, pathIds, "The node ids of the paths are not matching");
+    }
+
+    @Test
+    @SuppressWarnings("PMD.UnitTestContainsTooManyAsserts")
+    void structuredPathResultReportsTraversalMetadata() {
+        final Warp spawn = new Warp("Spawn", uuidOne, 1.0, true, false);
+        final TeleportRules rules = new TeleportRules(true, true, true, List.of(spawn));
+
+        final PathResult localTeleport = algorithm.findPathResult(graph, uuidOne, Set.of(uuidSeven), null, rules);
+        final PathResult warp = algorithm.findPathResult(graph, uuidThree, Set.of(uuidOne), null, rules);
+
+        assertEquals(TraversalKind.LOCAL_TELEPORT, localTeleport.segments().getLast().traversalKind(),
+                "Local teleport edge should be reported as local teleport traversal");
+        assertEquals(TraversalKind.WARP, warp.segments().getLast().traversalKind(),
+                "Warp route should be reported as warp traversal");
+        assertEquals("Spawn", warp.segments().getLast().warpKey(), "Warp segment should keep warp key metadata");
     }
 }
